edited about.html, added buttons, p, images, fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -239,14 +239,26 @@ footer nav a {
   width: 100%;
   padding-top: 2%;
 }
-a {
+a:hover {
   color: black;
+  animation-fill-mode: backwards;
 }
 .section-1 {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding-top: 2%;
+}
+.container section-1 a:hover {
+  animation: pulse 5s infinite;
+  @keyframes pulse {
+    0% {
+      background-color: white;
+    }
+    100% {
+      background-color: brown;
+    }
+  }
 }
 .road-img {
   width: 100%;
@@ -353,4 +365,10 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.section-01 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 2%;
 }
